# scavgen

./: .gitignore  .itch.toml  CONTRIBUTING.md  Clan-gen.iss  Clangen.spec  LICENSE.md  README.md  Scavgen.spec  appdmg.json  changelog.txt  main.py  pyproject.toml
.github/workflows/: build.yml  test.yml
cache/: changelog_popup_shown
classic/cache/: changelog_popup_shown
classic/scripts/: utility.py
resources/: clansettings.json  credits_text.json  game_config.json  gamesettings.json  placements.json  prey_config.json
resources/dicts/: acc_display.json  achievements.json  backstories.json  checker.py  lead_ceremony_df.json  lead_ceremony_sc.json
resources/theme/: buttons.json  buttons_small.json  defaults.json  image_buttons.json  text_boxes.json  text_boxes_dark.json  text_boxes_small.json
scripts/: clan.py  event_class.py  events.py  utility.py
scripts/cat/: cats.py  history.py  names.py  pelts.py  skills.py  sprites.py  thoughts.py
scripts/clan_resources/: freshkill.py
scripts/events_module/: condition_events.py  death_events.py  disaster_events.py  freshkill_pile_events.py  generate_events.py  misc_events.py  new_cat_events.py  relation_events.py
scripts/game_structure/: discord_rpc.py  game_essentials.py  load_cat.py  windows.py
scripts/housekeeping/: datadir.py  version.py
scripts/patrol/: patrol.py  patrol_event.py  patrol_outcome.py
scripts/screens/: AchievementScreen.py  AffairScreen.py  AllegiancesScreen.py  ChooseMentorScreen.py  ClanScreen.py  (+27 more)
tests/: test_group_interaction.py
verification/: sedgestripe_0x803FA403_public.asc
(+222 files in other folders)
